Increase home page avatar size

--- a/layouts/partials/home/avatar.html
+++ b/layouts/partials/home/avatar.html
@@ -1,6 +1,6 @@
 {{ if and (isset .Site.Params "avatarurl") (not (isset .Site.Params "gravatar")) }}
   {{ with .Site.Params.avatarURL }}
-    <div class="avatar"><img src="{{ . | relURL }}" alt="avatar"></div>
+    <div class="avatar"><img src="{{ . | relURL }}" alt="avatar" style="width: 500px; height: auto;"></div>
   {{ end }}
 {{ end }}
 {{ with .Site.Params.gravatar }}
